Linting on HTML

--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
                     <p><b>4. Weighing and Billing machine:</b><br>
                             A Collaborative project between different departments i.e Mechanical Department, Electrical, and Electronics department and Computer science. A machine which weighs and bills automatically according to the weight of the product.<br><br></p>
                     <p><b>4. Develop a consensus algorithms for Blockchain Network:</b><br>
-                            Developed a consensus algorithm to secure the blockchain network from mallicious users and thus improving the efficiency of the network. For further information regarding this project click on the following <a href="pdf/Report.pdf" class="link" target="_blank"> report 
-                            .<br><br></p>
+                            Developed a consensus algorithm to secure the blockchain network from mallicious users and thus improving the efficiency of the network. For further information regarding this project click on the following <a href="pdf/Report.pdf" class="link" target="_blank"> report</a>.<br><br></p>
             </div>
         </main>
 
